specs/013-array-methods/examples/invalid/filter-callback-return-type.ts
let xs: int[] = [1, 2, 3];
let bad = xs.filter((x: int) => x + 1);
console.log(bad.length);
